--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Main Page</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,180 +25,228 @@
   </head>
   <body>
     <header>
-      <!---->
-      <!--NAV-->
-      <nav>
-        <a href="./index.html" class="logo-word"
-          >Web<span class="logo-piece-up">Studio</span></a
-        >
-
-        <ul>
-          <li>
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="nav-link" href="">Portfolio</a>
-          </li>
-          <li>
-            <a class="nav-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <!--Contact-->
-      <address class="it-is-a-adressss">
-        <ul>
-          <li>
-            <a class="contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+      <div class="container">
+        <!---->
+        <!--NAV-->
+        <div class="header-links">
+          <nav class="navigation">
+            <a href="./index.html" class="logo-word"
+              >Web<span class="logo-piece-up">Studio</span></a
             >
-          </li>
-          <li>
-            <a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
-      <!---->
+
+            <ul class="navigation-list">
+              <li>
+                <a class="nav-link" href="./index.html">Studio</a>
+              </li>
+              <li>
+                <a class="nav-link" href="">Portfolio</a>
+              </li>
+              <li>
+                <a class="nav-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <!--Contact-->
+          <address class="it-is-a-adressss">
+            <ul class="address-list">
+              <li>
+                <a class="contact" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="contact" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <!---->
+      </div>
     </header>
     <main>
       <!---->
       <!--Big block-->
       <section class="hero">
-        <h1 class="hero-text">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <div class="container hero-container">
+          <h1 class="hero-text">
+            Effective Solutions<br />
+            for Your Business
+          </h1>
+          <nav>
+            <button class="hero-button" type="button">Order Service</button>
+          </nav>
+        </div>
       </section>
       <!--4p with h3-->
-      <section>
-        <h2 class="advantages">Advantages</h2>
-        <ul>
-          <li>
-            <h3 class="mini-topic">Strategy</h3>
-            <p class="exp-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="mini-topic">Punctuality</h3>
-            <p class="exp-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="mini-topic">Diligence</h3>
-            <p class="exp-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="mini-topic">Technologies</h3>
-            <p class="exp-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="topics">
+        <div class="container advantages-container">
+          <h2 class="advantages" hidden>Advantages</h2>
+          <ul class="advantages-list">
+            <li class="advantages-topics">
+              <h3 class="mini-topic">Strategy</h3>
+              <p class="exp-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-topics">
+              <h3 class="mini-topic">Punctuality</h3>
+              <p class="exp-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-topics">
+              <h3 class="mini-topic">Diligence</h3>
+              <p class="exp-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-topics">
+              <h3 class="mini-topic">Technologies</h3>
+              <p class="exp-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Team-->
       <section class="team">
-        <h2 class="team-list">Our Team</h2>
-        <ul>
-          <li class="worker">
-            <img
-              src="./images/hu1.jpg"
-              alt="Solid man with beard"
-              width="264"
-            />
-            <h3 class="human-worker">Mark Guerrero</h3>
-            <p class="profesional">Product Designer</p>
-          </li>
-          <li class="worker">
-            <img src="./images/hu2.jpg" alt="Happy man" width="264" />
-            <h3 class="human-worker">Tom Ford</h3>
-            <p class="profesional">Frontend Developer</p>
-          </li>
-          <li class="worker">
-            <img
-              src="./images/hu3.jpg"
-              alt="Woman in pink clothes"
-              width="264"
-            />
-            <h3 class="human-worker">Camila Garcia</h3>
-            <p class="profesional">Marketing</p>
-          </li>
-          <li class="worker">
-            <img src="./images/hu4.jpg" alt="Man look at us" width="264" />
-            <h3 class="human-worker">Daniel Wilson</h3>
-            <p class="profesional">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-text">Our Team</h2>
+          <ul class="team-list">
+            <li class="worker">
+              <img
+                src="./images/hu1.jpg"
+                alt="Solid man with beard"
+                width="264"
+              />
+              <div class="worker-text">
+                <h3 class="human-worker">Mark Guerrero</h3>
+                <p class="profesional">Product Designer</p>
+              </div>
+            </li>
+            <li class="worker">
+              <img src="./images/hu2.jpg" alt="Happy man" width="264" />
+              <div class="worker-text">
+                <h3 class="human-worker">Tom Ford</h3>
+                <p class="profesional">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="worker">
+              <img
+                src="./images/hu3.jpg"
+                alt="Woman in pink clothes"
+                width="264"
+              />
+              <div class="worker-text">
+                <h3 class="human-worker">Camila Garcia</h3>
+                <p class="profesional">Marketing</p>
+              </div>
+            </li>
+            <li class="worker">
+              <img src="./images/hu4.jpg" alt="Man look at us" width="264" />
+              <div class="worker-text">
+                <h3 class="human-worker">Daniel Wilson</h3>
+                <p class="profesional">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Our Portfolio-->
-      <section>
-        <h2 class="portfolio">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="./images/img1.jpg" alt="Purple squads" width="360" />
-            <h3 class="name-thing">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img src="./images/img2.jpg" alt="Qr-code in a phone" width="360" />
-            <h3 class="name-thing">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img3.jpg"
-              alt="Laptop and smartphone"
-              width="360"
-            />
-            <h3 class="name-thing">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img4.jpg"
-              alt="Steering wheel in car"
-              width="360"
-            />
-            <h3 class="name-thing">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img5.jpg"
-              alt="Phone and backgrounds"
-              width="360"
-            />
-            <h3 class="name-thing">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/img6.jpg"
-              alt="Happy woman check her phone"
-              width="360"
-            />
-            <h3 class="name-thing">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="portfolio-page">
+        <div class="container">
+          <h2 class="portfolio">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img src="./images/img1.jpg" alt="Purple squads" width="360" />
+              <div class="portfolio-text-together">
+                <h3 class="name-thing">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img2.jpg"
+                alt="Qr-code in a phone"
+                width="360"
+              />
+              <div class="portfolio-text-together">
+                <h3 class="name-thing">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img3.jpg"
+                alt="Laptop and smartphone"
+                width="360"
+              />
+              <div class="portfolio-text-together">
+                <h3 class="name-thing">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img4.jpg"
+                alt="Steering wheel in car"
+                width="360"
+              />
+              <div class="portfolio-text-together">
+                <h3 class="name-thing">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img5.jpg"
+                alt="Phone and backgrounds"
+                width="360"
+              />
+              <div class="portfolio-text-together">
+                <h3 class="name-thing">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img6.jpg"
+                alt="Happy woman check her phone"
+                width="360"
+              />
+              <div class="portfolio-text-together">
+                <h3 class="name-thing">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
+
       <!---->
     </main>
     <footer class="this-is-footi">
-      <!---->
-      <a href="./index.html" class="logo-word"
-        >Web<span class="logo-piece-down">Studio</span></a
-      >
-      <p class="down-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-      <!---->
+      <section class="end-item">
+        <div class="container">
+          <!---->
+          <a href="./index.html" class="logo-word"
+            >Web<span class="logo-piece-down">Studio</span></a
+          >
+          <p class="down-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+          <!---->
+        </div>
+      </section>
     </footer>
   </body>
 </html>
