--- a/index.html
+++ b/index.html
@@ -24,44 +24,44 @@
     />
   </head>
   <body>
-    <header>
-      <div class="container">
+    <header class="it-is-header">
+      <div class="container container-header">
         <!---->
         <!--NAV-->
-        <div class="header-links">
-          <nav class="navigation">
-            <a href="./index.html" class="logo-word"
-              >Web<span class="logo-piece-up">Studio</span></a
-            >
 
-            <ul class="navigation-list">
-              <li>
-                <a class="nav-link" href="./index.html">Studio</a>
-              </li>
-              <li>
-                <a class="nav-link" href="">Portfolio</a>
-              </li>
-              <li>
-                <a class="nav-link" href="">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-          <!--Contact-->
-          <address class="it-is-a-adressss">
-            <ul class="address-list">
-              <li>
-                <a class="contact" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="contact" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+        <nav class="navigation">
+          <a href="./index.html" class="logo-word"
+            >Web<span class="logo-piece-up">Studio</span></a
+          >
+
+          <ul class="navigation-list">
+            <li class="navigation-link">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="navigation-link">
+              <a class="nav-link" href="">Portfolio</a>
+            </li>
+            <li class="navigation-link">
+              <a class="nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!--Contact-->
+        <address class="it-is-a-adres">
+          <ul class="address-list">
+            <li>
+              <a class="contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+
         <!---->
       </div>
     </header>
