--- a/index.html
+++ b/index.html
@@ -70,13 +70,8 @@
       <!--Big block-->
       <section class="hero">
         <div class="container hero-container">
-          <h1 class="hero-text">
-            Effective Solutions<br />
-            for Your Business
-          </h1>
-          <nav>
-            <button class="hero-button" type="button">Order Service</button>
-          </nav>
+          <h1 class="hero-text">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
         </div>
       </section>
       <!--4p with h3-->
