--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <!--4p with h3-->
       <section class="topics">
         <div class="container advantages-container">
-          <h2 class="advantages" hidden>Advantages</h2>
+          <h2 class=".visually-hidden" hidden>Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-topics">
               <h3 class="mini-topic">Strategy</h3>
