--- a/index.html
+++ b/index.html
@@ -229,19 +229,17 @@
       <!---->
     </main>
     <footer class="this-is-footi">
-      <section class="end-item">
-        <div class="container">
-          <!---->
-          <a href="./index.html" class="logo-word"
-            >Web<span class="logo-piece-down">Studio</span></a
-          >
-          <p class="down-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-          <!---->
-        </div>
-      </section>
+      <div class="container">
+        <!---->
+        <a href="./index.html" class="logo-word down-word"
+          >Web<span class="logo-piece-down">Studio</span></a
+        >
+        <p class="down-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+        <!---->
+      </div>
     </footer>
   </body>
 </html>
